--- a/views/graficaMes.ejs
+++ b/views/graficaMes.ejs
@@ -164,14 +164,9 @@
                                         aria-controls="item-1-2" aria-selected="false" href="#item-1-2"
                                         data-bs-toggle="tab" style="color: rgb(15,200,244);font-weight: bold;">Prom
                                         S</a></li>
-                                <li class="nav-item"><a class="nav-link" id="item-1-3-tab" role="tab"
-                                        aria-controls="item-1-3" aria-selected="false" href="#item-1-3"
-                                        data-bs-toggle="tab" style="font-weight: bold;color: rgb(15,200,244);">Prom
-                                        F</a></li>
                                 <li class="nav-item"><a class="nav-link" id="item-1-3-tab-1" role="tab"
                                         aria-controls="item-1-3" aria-selected="false" href="#item-1-3"
-                                        data-bs-toggle="tab" style="color: rgb(15,200,244);font-weight: bold;">Frec
-                                        B</a></li>
+                                        data-bs-toggle="tab" style="color: rgb(15,200,244);font-weight: bold;">Deficit M </a></li>
                             </ul>
                         </div>
                         <div class="card-body" style="border: 2px solid rgb(204,238,254) ;">
@@ -186,8 +181,14 @@
                                     <p>Usted a tomado <%=promedioSemanal%> ml por semana en promedio</p>
                                 </div>
                                 <div id="item-1-3" class="tab-pane fade" role="tabpanel" aria-labelledby="item-1-3-tab">
-                                    <h4>frecuencia</h4>
-                                    <p>Te encuentras a solo <%=frecuencia%> ml de llegar a tu meta de agua</p>
+                                    <h4>Deficit Mensuual Promedio</h4>
+
+                                    <% if(Math.sign(diferencia)=='-1' ){ %>
+                                        <p>Te has excedido tu objetivo de consumo de agua con <%=(diferencia) * -1 %> ml en promedio por mes
+                                        </p>
+                                        <% } else {%>
+                                            <p>Estas a <%=diferencia%> ml de tu meta de agua en promedio por Mes</p>
+                                            <%}%>
 
                                 </div>
                             </div>
