--- a/views/graficaSemana.ejs
+++ b/views/graficaSemana.ejs
@@ -168,7 +168,7 @@
 
                                 <li class="nav-item"><a class="nav-link" id="item-1-3-tab-1" role="tab"
                                         aria-controls="item-1-3" aria-selected="false" href="#item-1-3"
-                                        data-bs-toggle="tab" style="color: rgb(15,200,244);font-weight: bold;">Deficit</a></li>
+                                        data-bs-toggle="tab" style="color: rgb(15,200,244);font-weight: bold;">Deficit Semanal</a></li>
                             </ul>
                         </div>
                         <div class="card-body" style="border: 2px solid rgb(204,238,254) ;">
@@ -176,7 +176,7 @@
                                 <div id="item-1-1" class="tab-pane fade show active" role="tabpanel"
                                     aria-labelledby="item-1-1-tab">
                                     <h4>Promedio Semanal</h4>
-                                    <p>Usted a tomado <%=promedioSemanal%> ml por dia en promedio</p>
+                                    <p>Usted a tomado <%=promedioSemanal%> ml por día en promedio</p>
                                 </div>
                                 <div id="item-1-2" class="tab-pane fade" role="tabpanel" aria-labelledby="item-1-2-tab">
                                     <h4>Promedio Mensual</h4>
