--- a/views/grupo.ejs
+++ b/views/grupo.ejs
@@ -54,51 +54,55 @@
                     <div class="user-body">
                         <h2 class="text-capitalize" style="margin-top: 25px;color: rgb(15,203,245);">
                             <%=nombreGrupo%> : <%=codigo%>
-                        </h2><span class="heading">Ranking de Usuario</span><span
-                            class="fa fa-star checked">&nbsp;</span><span class="fa fa-star checked">&nbsp;</span><span
-                            class="fa fa-star checked">&nbsp;</span><span class="fa fa-star checked">&nbsp;</span><span
-                            class="fa fa-star">&nbsp;</span>
+
+                        </h2><span class="heading">Ranking de Usuarios por consumo Diario</span>
                         <hr style="border:3px solid #f1f1f1">
                         <div class="rg-row">
-                            <% respuesta.forEach((user)=>{ %>
-                                <div  style="width: 130px;" class="side">
-                                    <div><span>
-                                            <%=user.nombre%>
-                                        </span></div>
-                                </div>
-                                <div class="middle">
-                                    <div class="bar-container">
-                                        <div class="bar-5" style="width: 50%;"></div>
+                            <%let i=0 ;%>
+                                <% respuesta.forEach((user)=>{ 
+                                    
+                                    let porcentaje = parseInt(consumos[i])/(parseInt(user.meta_agua) / 100);
+                                    %>
+                                    <div style="width: 130px;" class="side">
+                                        <div><span>
+                                                <%=user.nombre%>
+                                            </span></div>
                                     </div>
-                                </div>
-                                <div class="side right" style="width: 100px;">
-                                    <div><span>meta: <%=user.meta_agua%></span></div>
-                                </div>
-                                <%})%>
-                                    <% if(admon===1){ %>
-                                        <form action="/grupos/borrarGrupo" method="post">   
-                                            <input type="hidden" name="codigo" value="<%=codigo%>">
-                                            <input type="submit" class="btn btn-primary" data-bss-hover-animate="rubberBand"
-                                            type="submit"
-                                            style="position: static;display: inline-block;margin-left: 30%;background: #52b4e8; border-color: #52b4e8 ;margin-top: 1rem; color: white;"
-                                            value="Borrar">
-                                            
-                                       
-                                        </form>
-                                        
-                                        <%}else{ %>
-                                            <form action="/grupos/salirGrupo" method="post">   
+                                    <div class="middle">
+                                        <div class="bar-container">
+                                            <div class="bar-5" style="width: <%=porcentaje%>%"></div>
+                                        </div>
+                                    </div>
+                                    <div class="side right" style="width: 100px;">
+                                        <%  %>
+                                            <div><span>meta: <%=user.meta_agua%> mL</span>
+                                            </div>
+                                    </div>
+                                    <%i++; })%>
+                                        <% if(admon===1){ %>
+                                            <form action="/grupos/borrarGrupo" method="post">
                                                 <input type="hidden" name="codigo" value="<%=codigo%>">
-                                                <input type="submit" class="btn btn-primary" data-bss-hover-animate="rubberBand"
-                                                type="submit"
-                                                style="position: static;display: inline-block;margin-left: 30%;background: rgb(233, 134, 6); border-color:rgb(233, 134, 6) ;margin-top: 1rem; color: black;"
-                                                value="Salir">
-                                                
-                                           
-                                            </form>
-                                            
+                                                <input type="submit" class="btn btn-primary"
+                                                    data-bss-hover-animate="rubberBand" type="submit"
+                                                    style="position: static;display: inline-block;margin-left: 30%;background: #52b4e8; border-color: #52b4e8 ;margin-top: 1rem; color: white;"
+                                                    value="Borrar">
 
-                                            <% } %>
+
+                                            </form>
+
+                                            <%}else{ %>
+                                                <form action="/grupos/salirGrupo" method="post">
+                                                    <input type="hidden" name="codigo" value="<%=codigo%>">
+                                                    <input type="submit" class="btn btn-primary"
+                                                        data-bss-hover-animate="rubberBand" type="submit"
+                                                        style="position: static;display: inline-block;margin-left: 30%;background: rgb(233, 134, 6); border-color:rgb(233, 134, 6) ;margin-top: 1rem; color: black;"
+                                                        value="Salir">
+
+
+                                                </form>
+
+
+                                                <% } %>
 
 
                         </div>
