validaciones en register

--- a/views/registrar.ejs
+++ b/views/registrar.ejs
@@ -542,8 +542,8 @@
                         </select></div>
 
                     <% if (mensaje){ %>
-                        <div class="mb-3"><label class="form-label" for="email">Email: ese email ya esta
-                                regitrado</label><input name="correo" class="form-control" type="email" id="email-2"
+                        Email
+                        <div class="mb-3"><label class="form-label" for="email"><%=mensaje%></label><input name="correo" class="form-control" type="email" id="email-2"
                                 required=""></div>
 
                         <%} else{ %>
