--- a/views/home.ejs
+++ b/views/home.ejs
@@ -115,21 +115,12 @@
                                                             <%= user.azucar %> gramos
                                                         </td>
                                                         <td>
-                                                            <% //Traducir fecha al es-419 (espanol)
+                                                      
 
-                                                            const formatoFecha = new Intl.DateTimeFormat('es-419', {
-                                                                year: 'numeric',
-                                                                month: 'long',
-                                                                day: 'numeric',
-                                                                hour: 'numeric',
-                                                                minute: 'numeric',
-                                                                second: 'numeric',
-                                                                hour12: false
-                                                              });
-                                                              const fechaFormateada = formatoFecha.format(user.fecha); %>
-                                                            
-                                                            <%  let fechaSplit = fechaFormateada.split(",")  %>
+                                                            <% let fechaC =String(user.Fecha);
+                                                             let fechaSplit = fechaC.split("00:00:00")  %>
                                                                 <%=fechaSplit[0]%>
+                                                          
                                                         </td>
                                                         <td class="text-center align-middle"
                                                             style="max-height: 60px;height: 60px;">
