--- a/views/Editar.ejs
+++ b/views/Editar.ejs
@@ -32,7 +32,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item item"><a class="nav-link active" href="/home">Home</a></li>
                     <li class="nav-item item"><a class="nav-link" href="/regAgua">Registro</a></li>
-                    <li class="nav-item item"><a class="nav-link" href="/Bebidas">Otras Bebidas</a></li>
+                    <li class="nav-item item"><a class="nav-link" href="/refrescos">Otras Bebidas</a></li>
                     <li class="nav-item item"><a class="nav-link" href="/grupos">Grupos</a></li>
                     <li class="nav-item item"><a class="nav-link" href="/perfil">Perfil</a></li>
                 </ul>
